--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 </head>
-
 <body>
-	<ul id="message">
-
-	</ul>
-
-	<form action="">
-
-		<input type="text" name="" id="" placeholder="Escribe algo">
-	</form>
-
-	<script src="/socket.io/socket.io.js"></script>
-	<script>
-		console.log(io());
-	</script>
+		<p>Hola mundo</p>
 </body>
-
 </html>
